//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "SEED 2.0" {
  database_type: 'PostgreSQL'
  Note: 'SEED 2.0'
}

Table users {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  gender String
  phoneNumber String
  dob String
  profileImage String
  roles Role[] [not null]
  address String
  tags String[] [not null]
  course String
  section String
  batch String
  emailtemplates email_templates [not null]
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  Event calendar_events [not null]
  JobVacancy job_vacancies [not null]
}

Table email_templates {
  id String [pk]
  subject String [not null]
  body String [not null]
  condition Json
  createdBy users [not null]
  userId String [not null]
  status String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  CalendarEvents calendar_events [not null]
}

Table calendar_events {
  id String [pk]
  title String [not null]
  description String [not null]
  eventDateTime DateTime [not null]
  emailTemplateId String [not null]
  emailTemplate email_templates [not null]
  condition Json [not null]
  color String [not null, default: '#000000']
  to String
  createdBy users [not null]
  userId String [not null]
  status String [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table job_vacancies {
  id String [pk]
  title String [not null]
  body String [not null]
  status Status [not null, default: 'ACTIVE']
  employmentTypes String[] [not null]
  experience String [not null]
  role String [not null]
  skills String[] [not null]
  workSchedule String[] [not null]
  location String[] [not null]
  expiryDate DateTime [not null]
  salary Json [not null]
  salaryNegotiable Boolean [not null]
  benefits String[] [not null]
  isPublished Boolean [not null, default: false]
  JobApplication job_applications [not null]
  userId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table job_applications {
  id String [pk]
  name String
  email String
  phone String
  skills String[] [not null]
  profile String
  summary String
  yearsOfExperience String
  jobVacancyId String [not null]
  resume String
  matchPercentage Int
  shortInfo String
  resumeLink String
  summaryLink String
  jobVacancy job_vacancies [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Status {
  ACTIVE
  INACTIVE
  BLOCKED
  DRAFT
}

Enum Role {
  ADMIN
  USER
  STAFF
}

Ref: email_templates.userId > users.id

Ref: calendar_events.emailTemplateId > email_templates.id [delete: Cascade]

Ref: calendar_events.userId > users.id [delete: Set Null]

Ref: job_vacancies.userId > users.id [delete: Set Null]

Ref: job_applications.jobVacancyId > job_vacancies.id [delete: Cascade]